<resources>
    <string name="app_name">NoteShare</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="splashText">UrbanShopping</string>
    <string name="menu">sliding menu</string>
    <string name="open_drawer">sliding menu</string>
    <string name="close_drawer">sliding menu</string>
    <string name="login">LOGIN</string>
    <string name="createaccount">I DO NOT HAVE ACCOUNT</string>
    <string name="createanaccount">CRETAE AN ACCOUNT</string>
    <string name="proaccount">PRO</string>
    <string name="ok">OK</string>
    <string name="upgradetopro">Upgrade to Pro</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="enter_fields">Please enter all fields!</string>
    <string name="connect_with">Connect via</string>
    <string name="size">Size </string>
    <string name="zero">0</string>
    <string name="btn_fb">Facebook</string>
    <string name="btn_tw">Twitter</string>
    <string name="btn_gp">Google+</string>
    <string name="facebook_app_id">914213595337843</string>
    <string name="facebook_login_text">FACEBOOK</string>
    <string name="google_plus_login_text">Login with Google+</string>
    <string name="twitter_consumer_key">IXJatdtzC4fdYGyAdtCiG2y6g</string>
    <string name="twitter_consumer_secret">350C1gs7fztdZRZvAL6MI7cLYwX6PFHVlvvqqE4qXamjIukxt8</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="fb_unable_to_connect">Unable to connect to Facebook, Please try again!</string>
    <string name="gp_unable_to_connect">Unable to connect to Google Plus, Please try again!</string>
    <string name="about">About</string>
    <string name="tctitle">Mobile App Terms and Conditions</string>
    <string name="tcgeneraltitle">1. GENERAL</string>
    <string name="tcgeneralbody">1.1 By installing the application (as defined below) you agree to be bound by these terms of use
                                    ("appterms"). Please review them carefully before installation and / or acceptance.</string>
    <string name="tcdefinitionstitle">2. DEFINITIONS</string>
    <string name="tcdefinitionsbody">2.1. The "Application" shall mean the software provided by &lt;&lt; Insert the company name &gt;&gt;
                                    to offer a platform to record any users’ notes including text, images, audio and brush stroke for their
                                    personal use.</string>
    <string name="tcdataprotectiontitle">3. DATA PROTECTION</string>
    <string name="tcdataprotectionbody1">3.1. Any personal information you supply to &lt;&lt; insert the Company Name &gt;&gt; when using the
                                    Application will be used by &lt;&lt; Insert the Company Name &gt;&gt; in accordance with its Privacy Policy</string>
    <string name="tcdataprotectionbody2">3.2. All information collected when using the Application will be stored securely and not released or revealed to any other party for the purpose of Marketing</string>
    <string name="tcelectitle">4. ELECTRONIC COMMUNICATIONS</string>
    <string name="tcelecbody">4.1. When you use any &lt;&lt; Insert Application Name &gt;&gt; Service or send e-mails to us, you are communicating with us electronically. You consent to receive communications from us electronically. We will communicate with you by e-mail or by posting notices on the Application. You agree that all agreements, notices, disclosures and other such communications that we provide to you electronically satisfy any legal requirement that such communication be in writing.</string>
    <string name="tcthirdpartytitle">5. USE OF THIRD PARTY SERVICES</string>
    <string name="tcthirdpartybody">5.1. When you use the &lt;&lt; Insert Application Name &gt;&gt;, you may also be using the services of one or more third parties, such as a wireless carrier or a mobile platform provider. Your use of these third party services may be subject to the separate policies, terms of use and fees of these third parties.</string>
    <string name="tcreversetitle">6. NO REVERSE ENGINEERING</string>
    <string name="tcreversebody">6.1. You may not, and you will not encourage, assist or authorize any other person to modify, reverse engineer, decompile or disassemble, or otherwise tamper with, the &lt;&lt; Insert Application Name &gt;&gt;, whether in whose or in part, or create any derivative works from or of the &lt;&lt; Insert Application Name &gt;&gt;</string>
    <string name="tcupdatestitle">7. UPDATES</string>
    <string name="tcupdatesbody">7.1. In order to keep the &lt;&lt; Insert Application Name &gt;&gt; up-to- date, we may offer automatic or manual updates at any time without notice to you</string>
    <string name="tcusetitle">8. USE OF &lt;&lt; Insert Application Name &gt;&gt;</string>
    <string name="tcusebody">8.1. You may use the &lt;&lt; Insert Application Name &gt;&gt; only in connection with the &lt;&lt; Insert Application Name &gt;&gt;. You may not separate any individual component of the &lt;&lt; Insert Application Name &gt;&gt; for use other than in the connection of the above services, incorporate any portion of it into your own programs or compile any portion of it in combination with your own programs, transfer it for use with another service, use it, or any portion of it, over a network, or sell, rent, lease, lend, loan, distribute or sub-license the &lt;&lt; Insert Application Name &gt;&gt; or otherwise assign any rights to the &lt;&lt; Insert Application Name &gt;&gt; in whole or in part. You may not use the &lt;&lt; Insert Application Name &gt;&gt; for any illegal purpose. We may discontinue some or all of any &lt;&lt; Insert Application Name &gt;&gt; we provide, and we may terminate your right to use any &lt;&lt; Insert Application Name &gt;&gt; at any time and in such event may modify it to make it inoperable. Your rights to use the &lt;&lt; Insert Application Name &gt;&gt; will automatically terminate without notice from us if you fail to comply with any of these terms. Additional third party terms contained within or distributed with certain &lt;&lt; Insert Application Name &gt;&gt; that are specifically identified in related documentation may apply to that &lt;&lt; Insert Application Name &gt;&gt; and will govern the use of that &lt;&lt; Insert Application Name &gt;&gt; in the event of a conflict with these conditions of use.</string>
    <string name="tcsystemtitle">9. SYSTEM REQUIREMENTS</string>
    <string name="tcsystembody1">9.1. In order to access the Application, you are required to have a compatible mobile telephone or handheld device, internet access, and the necessary minimum specifications (“Software Requirements”)</string>
    <string name="tcsystembody2">9.2. The Software Requirements are as follows: Apple iOS devices running iOS ____________________, and Android OS devices running Android _______________________; Language: ____________________________</string>
    <string name="tcsystembody3">9.3. The version of the Application software may be upgraded from time to time to add support for new functions and services</string>
    <string name="tclimittitle">10. LIMITATION OF LIABILITY</string>
    <string name="tclimitbody1">10.1. In no event will &lt;&lt; Insert Company Name &gt;&gt; be liable for any direct, indirect, special, punitive, exemplary or consequential losses or damages of whatsoever kind arising out of your use or access to the Application, including loss of profit or the like whether or not in the contemplation of the parties, whether based on breach of contract, tort (including negligence), product liability or otherwise.</string>
    <string name="tclimitbody2">&lt;&lt; Insert Company Name &gt;&gt; is not liable for any damage or alteration to your equipment including but not limited to computer equipment, handheld device or mobile telephones as a result of the installation or use of the Application</string>
    <string name="invite_friends_text">Download NoteShare - Note Sharing app on Android/iOS</string>
    <string-array name="navigation_drawer_items_array">
        <item>Home</item>
        <item>Profile Setting</item>
        <item>Favorite</item>
        <item>Manage Shoping</item>
        <item>Manage Sale</item>
        <item>Game</item>
        <item>Sign Out</item>
        <item>Login</item>
    </string-array>
    <string name="resturent">Resturent</string>
    <string name="country_prompt">Choose a Item</string>
    <string-array name="country_arrays">
        <item>Choose a Item</item>
        <item>item 0</item>
        <item>item 1</item>
        <item>item 2</item>
        <item>item 3</item>
        <item>item 4</item>
        <item>item 5</item>
        <item>item 6</item>
        <item>item 7</item>
    </string-array>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string-array name="colors">
        <item>RED</item>
        <item>GREEN</item>
        <item>CYAN</item>
        <item>BLUE</item>
        <item>BLACK</item>
    </string-array>
    <string-array name="Typeface">
        <item>NORMAL</item>
        <item>BOLD</item>
        <item>ITALIC</item>
    </string-array>
    <string-array name="Font_Size">
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>18</item>
        <item>20</item>
        <item>22</item>
        <item>24</item>
        <item>26</item>
        <item>28</item>
        <item>30</item>
        <item>32</item>
        <item>34</item>
        <item>36</item>
        <item>38</item>
        <item>40</item>
        <item>42</item>
        <item>44</item>
    </string-array>
    <string-array name="Font_Size_px">
        <item>8 px</item>
        <item>9 px</item>
        <item>10 px</item>
        <item>12 px</item>
        <item>14 px</item>
        <item>16 px</item>
        <item>18 px</item>
        <item>20 px</item>
        <item>22 px</item>
        <item>24 px</item>
        <item>26 px</item>
        <item>28 px</item>
        <item>30 px</item>
        <item>32 px</item>
        <item>34 px</item>
        <item>36 px</item>
        <item>38 px</item>
        <item>40 px</item>
        <item>42 px</item>
        <item>44 px</item>
    </string-array>
    <string-array name="Font_Name_Display">
        <item>Arial</item>
        <item>Times new roman</item>
        <item>Helvetica</item>
        <item>Monotype corsiva</item>
        <item>Edwardian</item>
        <item>Mongolian baiti</item>
        <item>Sakkal majalla</item>
        <item>DOSIS BOOK</item>
        <item>DANCING SCRIPT</item>
        <item>Eras medium ITC</item>
        <item>CINZEL DECORATIVE</item>
        <item>JUNCTION</item>
        <item>LINDEN HILL</item>
        <item>PACIFICO</item>
        <item>WINDSONG</item>
    </string-array>
    <string name="title_activity_passcode">PasscodeActivity</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_tutorial">Tutorial</string>
</resources>