<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/header_bg"
    android:id="@+id/container"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/single_logo" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <View
                android:layout_width="40dp"
                android:layout_height="2dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:background="#fff" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/connect_with"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <View
                android:layout_width="40dp"
                android:layout_height="2dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="#fff" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/facebookbuttonbg"
            android:drawableLeft="@drawable/fb_icon"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="55dp"
            android:paddingTop="10dp"
            android:text="@string/btn_fb"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:onClick="main"/>

        <Button
            android:id="@+id/btn_googleplus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:background="@color/googleplusbuttonbg"
            android:drawableLeft="@drawable/gp_icon"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="55dp"
            android:paddingTop="10dp"
            android:text="@string/btn_gp"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:onClick="main"/>

        <!--<Button
            android:id="@+id/btn_twitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:background="@color/twitterbuttonbg"
            android:drawableLeft="@drawable/twitter_icon"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="55dp"
            android:paddingTop="10dp"
            android:text="@string/btn_tw"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:onClick="main"/>-->

    </LinearLayout>

</LinearLayout>